# foreign-lib-standalone-hello

./: .gitignore  README.md  foreign-lib-standalone-hello.cabal
cbits/: hello.c
clib/: Hello.hs
include/: hello.h
