cabal-version:       2.2

name:                foreign-lib-standalone-hello
version:             0.1.0.0
synopsis:            Minimal Haskell package for testing foreign lib compatibility
description:         Minimal Haskell package for testing foreign lib compatibility
homepage:            https://github.com/TravisWhitaker/foreign-lib-standalone-hello
bug-reports:         https://github.com/TravisWhitaker/foreign-lib-standalone-hello/issues
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2022
category:            Testing
extra-source-files:  CHANGELOG.md, README.md

foreign-library hello
  type:             native-shared
  options:          standalone
  other-modules:    Hello
  hs-source-dirs:   clib
  include-dirs:     include
  install-includes: hello.h
  c-sources:        cbits/hello.c
  build-depends:    base
  default-language: Haskell2010
  ghc-options:      -O2
                    -Wall
                    -Widentities
                    -Wredundant-constraints
                    -Wcompat
                    -Wno-type-defaults
                    -Wno-unused-local-binds
                    -Wno-unused-do-bind
                    -Wno-unused-matches
                    -Werror
                    -threaded
  if (os(darwin))
    ghc-options: -optP-Wno-nonportable-include-path

